--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,7 +1,7 @@
 tasks:
   - name: aws-cli
     env:
-      AWS_CLI_AUTO_PROMPT: on-partial
+    AWS_CLI_AUTO_PROMPT: on-partial
     init: |
       cd /workspace
       curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
@@ -10,4 +10,4 @@ tasks:
       cd $THEIA_WORKSPACE_ROOT
 vscode:
   extensions:
-      -42Crunch.vscode-openapi
+      - 42Crunch.vscode-openapi
